Flailing about to get a shell

--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@
         <canvas style="display: none"></canvas>
     </div>
     <h2>Serial console</h2>
-    <pre style="white-space: pre; font: 10px monospace;" id="serial-console"></pre>
+    <textarea readonly rows="25" cols="80" autocomplete="off" id="serial-console"></textarea>
 </body>
