--- a/index.html
+++ b/index.html
@@ -2,15 +2,9 @@
 <html lang="en">
 <head>
     <title>v86 csdk</title>
-    <script type="module" src="index.mjs"></script>
+    <script type="module" src="./src/index.mjs"></script>
 </head>
 <body>
-
-    <h2>Screen</h2>
-    <div id="screen_container">
-        <div style="white-space: pre; font: 14px monospace; line-height: 14px"></div>
-        <canvas style="display: none"></canvas>
-    </div>
-    <h2>Serial console</h2>
-    <textarea readonly rows="25" cols="80" autocomplete="off" id="serial-console"></textarea>
+    <h2>Terminal</h2>
+    <div id="terminal"></div>
 </body>
